# json_parser

./: CMakeLists.txt  cam_config.json  main.cpp
gtests/: CMakeLists.txt  test.json  tmain.cpp
gtests/test_files/: space_test.txt  test.json
gtests/unit/: generic.cpp  parser_tests.cpp  settings_applying_tests.cpp
src/: json.cpp  json.h  support.cpp  support.h
